i do some changes like i set nav first word change to uppercase and also in mobile navigation give me some problem i solve that problem and took alot of time the problem are not too big but

--- a/css/general.css
+++ b/css/general.css
@@ -78,6 +78,7 @@ body {
   font-size: 62.5%; /* 1rem = 10px */
   font-weight: 400; /* Default weight */
   color: #707070;
+  scroll-behavior: smooth;
 }
 
 /**************************/
